[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["mohammad silwadi <mohammadsilwadi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
